[package]
name = "reservoirs"
version = "0.1.5"
authors = ["crumplecup <erik.w.rose@gmail.com>"]
edition = "2018"
description = "A library for simulating Bolin & Rodhes reservoir models."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
plotters = "0.3.0"
plotters-bitmap = "0.3.0"
rand = "0.8.3"
rand_distr = "0.4.0"
rayon = "1.5.0"
serde = { version = "1.0.123", features = ["derive"] }

