[package]
name = "reservoirs"
version = "0.1.6"
authors = ["crumplecup <erik.w.rose@gmail.com>"]
edition = "2018"
description = "A library for simulating Bolin & Rodhes reservoir models."
license = "MIT OR Apache-2.0"
repository = "https://github.com/crumplecup/reservoirs"
keywords = ["geomorphology", "radiocarbon", "charcoal"]
categories = ["science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
log = "0.4.14"
plotters = "0.3.0"
plotters-bitmap = "0.3.0"
pretty_env_logger = "0.4.0"
rand = "0.8.3"
rand_distr = "0.4.0"
rayon = "1.5.0"
realfft = "2.0.1"
rustfft = "6.0.0"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmarks"
harness = false
